# health-ri-metadata

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HRI_Metadata_sunflower.pptx  README.md  confluence.md  coreMedataSchemaRefinedP1.vpp  coreMedataSchemaRefinedP1.vpp.bak_000f  organisation.ttl  pyproject.toml
Diagrams (Visual Paradigm)/: HRICoreSchemaReleasePlateau1.vpp  HRICoreSchemaReleasePlateau1.vpp.bak_001d  HRICoreSchemaReleasePlateau1.vpp.bak_002d  HRICoreSchemaReleasePlateau1.vpp.bak_004d  HRICoreSchemaReleasePlateau1.vpp.bak_005d  HRICoreSchemaReleasePlateau1.vpp.bak_006d  Health-RI.vpp  Health-RI.vpp.vbak~1  Health-RI_09.vpp  Health-RI_09.vpp.bak_001d  Health-RI_09.vpp.bak_003d  Health-RI_09_reviewed.vpp  Health-RI_FINAL20231004.vpp
Documents/: DecisionLog_v2.docx  Metadata_CoreGenericHealth_v2.xlsx  Pre-release_metadata_CoreGenericHealth_p2.xlsx  V2_decisionLog.md
Evaluation Document/: Evaluation Anlysis.docx
Health RI domain_model (Visual Paradigm)/: Health-RI.vpp.bak_001d  Health-RI_09.vpp  Health-RI_09.vpp.bak_000f
Images/: HRICoreSchemaReleasePlateau1.vpp.bak_003d  HRICoreSchemaReleasePlateau1.vpp.bak_007d  Health-RI.vpp.vbak  Health-RI_09.vpp  Health-RI_09_reviewed.vpp.bak_000f
Implementation/: metadata collection sheet template.xlsx
Leaves/: README.md
Leaves_Petals/: README.md  metadata collection sheet template.xlsx
MapToDCAT-AP/: Generic Mapping patterns.docx  mapToDcat-ap_GeneralSteps.docx  ~$pToDcat-ap_GeneralSteps.docx
Metadata Requirements/: HealthRI Metadata Schema Requirements, nomenclatures.xlsx  ~$HealthRI Metadata Schema Requirements, nomenclatures.xlsx
Metadata graphs - Examples/: metadatagraph.ttl.rml
Modules/: README.md
Presentations/: 31082023HRI_Metadata_Schema_ImagingGroup_KickOff.pptx  HRI_Metadata_Schema_ImagingGroup_KickOff (1).pptx  HRI_Metadata_Schema_ImagingGroup_KickOff.pptx  HRI_Metadata_TheSunflower20230613.pptx  [DRAFT]HRI_Metadata_Schema_ImagingGroup_KickOff.pptx  ~$[DRAFT]HRI_Metadata_Schema_ImagingGroup_KickOff.pptx
Requirements-Leaves_Petals/: HealthRI Metadata Schema Requirements, nomenclatures.xlsx
[modularisation approach] What is a Module?/: Module Definition.docx
documentation/: DescriptionSunflowerModel_ProposalMetadataGovernance.docx  ~$scriptionSunflowerModel_ProposalMetadataGovernance.docx
domain_model/: Health-RI.vpp  Health-RI.vpp.bak_002d  Health-RI.vpp.bak_003d  Health-RI.vpp.bak_004d  Health-RI.vpp.bak_005d  Health-RI.vpp.bak_007d  Health-RI.vpp.bak_008d  (+3 more)
(+161 files in other folders)
